--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:louisg9601@afsenyc.org">email</a></li>
-	        		<li><a href="https://github.com/louisg9601">github.com/hankquinlan</a></li>
+	        		<li><a href="https://github.com/louisg9601">github.com/LouisGonzalez</a></li>
 				</ul>
 			</footer>
 		</body>
